--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@modules/onboarding": "file:./modules/onboarding/",
     "@modules/privacy-policy-webview": "file:./modules/privacy-policy-webview/",
     "@modules/social-login": "file:./modules/social-login/",
+    "@modules/splash": "file:./modules/splash/",
     "@modules/terms-and-conditions-webview": "file:./modules/terms-and-conditions-webview/",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
+    "prop-types": "15.8.1",
     "react": "17.0.1",
     "react-dom": "^18.2.0",
     "react-native": "0.64.0",
@@ -32,6 +34,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
+    "react-native-splash-screen": "3.3.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.18.2",
     "react-native-webview": "11.23.0",
