--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -32,3 +32,9 @@ google-cloud-secret-manager = "==2.12.6"
 google-auth = "==2.12.0"
 google-cloud-storage = "==2.5.0"
 pipenv = "*"
+fcm-django = "==0.3.4"
+twilio = "*"
+sendgrid = "*"
+django-phonenumber-field = "==6.1.0"
+phonenumbers = "==8.12.45"
+pyotp = "*"
