--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -38,3 +38,5 @@ sendgrid = "*"
 django-phonenumber-field = "==6.1.0"
 phonenumbers = "==8.12.45"
 pyotp = "*"
+django-countries = "*"
+stripe = "==2.26.0"
